don't cache chunks loading packages from @bisaloo review

--- a/paper/paper.Rmd
+++ b/paper/paper.Rmd
@@ -98,7 +98,7 @@ Finally, we summarise our findings, discuss their implications, and highlight ar
 
 ## Data {-}
 
-```{r packages}
+```{r packages, cache = FALSE}
 library(data.table)
 library(purrr)
 library(scoringutils)
