--- a/paper/paper.Rmd
+++ b/paper/paper.Rmd
@@ -22,7 +22,7 @@ affiliation:
   - code: 2
     address: Chair of Statistics and Econometrics, Karlsruhe Institute of Technology (KIT), Karlsruhe, Germany
 abstract: > 
-  Multi-model and multi-team ensembles have become increasingly popular as an approach to increase the robustness and performance of infectious disease forecasts, especially during the COVID-19 pandemic. However, these forecasts require a coordinated team to produce and are effectively black boxes. In other fields, resource usage has been reduced by training simplified models that reproduce some of the observed behaviour of more complex models. Here we use observations of the behaviour of the ECDC forecast ensemble to specify a series of model assumptions. We then develop a forecast model using these assumptions and compare its performance to the ECDC forecast hub ensemble in real-time from the 15th of January 2022 to the 19th of July 2022 over a four week forecast horizon. We found that this surrogate model performed visibly similarly to a subset of locations though with increased uncertainty. Using the weighted interval score we concluded that average performance was substantially worse but that median performance was more comparable. The majority of the difference in performance was linked to a subset of forecasts from a period of high incidence. We note that despite performing worse than the hub ensemble the majority of the time our surrogate model was better calibrated, and less liable to underpredict.  The central part of the surrogate models forecast distribution performed more similarly to ensemble forecasts distribution whilst the tails of the surrogate forecast distribution were responsible for the large majority of the difference in median forecast performance. We conclude that our simplified forecast model may have captured some of the dynamics of the hub ensemble but that more work needs to be done to understand the implicit epidemiological model that represents its behaviour and whether or not this is the optimal choice for stakeholders requirements. We also conclude that our findings are largely driven by the choice of evaluation measure used by the forecast hub and that if this is misspecified then the forecast hub submissions may not be optimised to forecast users' expectations or requirements. Our work maybe useful for forecast consumers as a tool for understanding the inherent assumptions of the forecasts they are making use of and to researchers developing forecast approaches that perform similary, or better than, current multi-model and multi-team forecast ensembles that are trusted by stakeholders.
+  Multi-model and multi-team ensembles have become increasingly popular as an approach to increase the robustness and performance of infectious disease forecasts, especially during the COVID-19 pandemic. However, these forecasts require a coordinated team to produce and are effectively black boxes. In other fields, resource usage has been reduced by training simplified models that reproduce some of the observed behaviour of more complex models. Here we use observations of the behaviour of the ECDC forecast ensemble, combined with our own forecasting experience,  to specify a series of model assumptions. We then develop a forecast model using these assumptions and compare its performance to the ECDC forecast hub ensemble in real-time from the 15th of January 2022 to the 19th of July 2022 over a four-week forecast horizon. We found that this surrogate model performed visibly similarly to a subset of example locations though with increased uncertainty. Unsurprisingly, using the weighted interval score, we concluded that average performance was substantially worse but that median performance was more comparable. The majority of the difference in performance was linked to a few forecasts from a period of high incidence. We note that despite performing worse than the hub ensemble the majority of the time our surrogate model was better calibrated, and less liable to underpredict. The central part of the surrogate models forecast distribution performed more similarly to ensemble forecasts distribution whilst the tails of the surrogate forecast distribution were responsible for the large majority of the difference in median forecast performance. We conclude that our simplified forecast model may have captured some of the dynamics of the hub ensemble but that more work needs to be done to understand the implicit epidemiological model that represents its behaviour and whether or not this is the optimal choice for stakeholders' requirements. We also conclude that our findings are largely driven by the choice of evaluation measure used by the forecast hub and that if this is misspecified then the forecast hub submissions may not be optimised to forecast users' expectations or requirements. Our work is potentially useful for forecast consumers as a tool for understanding the inherent assumptions of the forecasts they are making use of and to researchers developing forecast approaches that perform similarly, or better than, current multi-model and multi-team forecast ensembles that are trusted by stakeholders.
 bibliography: library.bib
 output:
   bookdown::pdf_book:
@@ -46,49 +46,50 @@ knitr::opts_chunk$set(
 # Introduction {-}
 
 Multi-model and  multi-team ensembles have become increasingly popular as an approach to increase the robustness and performance of infectious disease forecasts over the last decade with significant success [@REF].
-These approaches have drawn heavily on the experience of other domains, for example climate modelling [@REF], where ensembles of both multiple models and from multiple teams have a long history of providing superior forecasts.
-However, ensemble forecasts have range of potential downsides with the most obvious being their considerable cost to produce as they typically require contributions from multiple independent teams, the development of several models, and a centralised group to run the ensembling project, and that forecasts from these ensembles can be difficult to link to the underling model assumption.
-In climate forecasting emulation approaches have been used to circumvent some of the  resource requirment issue by training a simplified model, usually a non-parametric statistical model, to replicate the behaviour of either the entire model or sub-components [@REF].
-However, within epidemiological modelling we often want to use our models for applications other than forecasting, have fewer insights beyond forecast performance on which to base our mechanistic assumptions. 
-This means that non-parametric emulation is not an ideal solution. 
-In this work we propose and evaluate a surrogate forecast model approach which seeks to emulate the observed behaviour of recent COVID-19 forecast ensembles using a minimal set of easily communicated assumptions, limited computational resources, and an easily generalised implementation. 
+These approaches have drawn heavily on the experience of other domains, for example, climate modelling [@REF], where ensembles of both multiple models and from multiple teams have a long history of providing superior forecasts.
+However, ensemble forecasts have a range of potential downsides with the most obvious being their considerable cost to produce as they typically require contributions from multiple independent teams, the development of several models, and a centralised group to run the ensembling project, and that forecasts from these ensembles can be difficult to link to the underlying model assumption.
+In climate forecasting emulation approaches have been used to circumvent some of the  resource requirement issues by training a simplified model, usually, a non-parametric statistical model, to replicate the behaviour of either the entire model or sub-components [@REF].
+However, within epidemiological modelling, we often want to use our models for applications other than forecasting and have fewer insights beyond forecast performance on which to base our mechanistic assumptions. 
+This means that non-parametric emulation is less suitable for use in epidemiological forecasting though for epidemiological scenario analysis in-sample emulation using non-parametric methods may have a role [@REFLSHTMTBEMULATOR].
+In this work, we propose and evaluate a surrogate forecast model approach which seeks to emulate the observed behaviour of recent COVID-19 forecast ensembles using a minimal set of easily communicated assumptions, limited computational resources, and an easily generalised implementation. 
 
-The trend towards large-scale multi-team ensemble forecasting in infectious diseases has accelerated during the COVID-19 pandemic, partially due to an increased need from stakeholders for reliable forecast models but also due to the percieved low quality of many forecasts otherwise being produced, with the establishment of the CDC forecasting hub [@REF] in early 2020, the Germany/Poland forecast hub [@REF] in late 2020, and ECDC forecast hub [@ECDC] in 2021. All of these collaborations, which the authors (particularly SF and JB have been involved with managing),  ensemble contributions from multiple independent teams using a similar ensembling approach (most recently an unweighted median ensemble [@REF]) and have shown that their ensemble forecasts outperform most individually contributed forecasts and provide forecasts that are more robust to outliers [@REF].
-However, they have struggled to provide feedback to those contributing forecasts that would allow them to improve their forecast approaches, have found it difficult to improve the quality of their ensemble forecasts [@REF], and have struggled to maintain incentives for forecasters to continue to contribute which may impact the long-term quality of the  ensembles they produce. 
+The trend towards large-scale multi-team ensemble forecasting in infectious diseases has accelerated during the COVID-19 pandemic, partially due to an increased need from stakeholders for reliable forecast models but also due to the perceived low quality of many forecasts otherwise being produced, with the establishment of the CDC forecasting hub [@REF] in early 2020, the Germany/Poland forecast hub [@REF] in late 2020, and ECDC forecast hub [@ECDC] in 2021. All of these collaborations, which the authors (particularly SF and JB have been involved with managing),  ensemble contributions from multiple independent teams using a similar ensembling approach (most recently an unweighted median ensemble [@REF]) and have shown that their ensemble forecasts outperform most individually contributed forecasts whilst remaining generally robust to outliers in reporting [@REF].
+However, they have struggled to provide feedback to those contributing forecasts that would allow them to improve their forecast approaches, have found it difficult to improve the quality of their ensemble forecasts [@REF], and have struggled to maintain incentives for forecasters to continue to contribute which may impact the long-term quality of the ensembles they produce. 
 
-These forecast collaborations, and other similar infectious disease forecasting efforts, have focussed on forecasting reported cases and deaths by epidemiological week (i.e Saturday to Saturday) over a 1 to 4 week time horizon. Generally ground truth data is available daily, and is updated in retrospect as new data becomes available. Typically, the ensemble forecast produced each week is made up of at least 5 independent forecasts using a range of approaches and is produced using an unweighted median ensemble [@REF].
-The majority of submitted forecasts make use of the available daily data, along with potentially other leading predictors to produce daily forecasts that are then aggregated to weekly forecasts.
+These forecast collaborations, and other similar infectious disease forecasting efforts, have focussed on forecasting reported cases and deaths by epidemiological week (i.e Saturday to Saturday) over a one to four-week time horizon. Generally, ground truth data is available daily, and is updated in retrospect as new data becomes available. Typically, the ensemble forecast produced each week comprises at least 5 independent forecasts using a range of approaches and is produced using an unweighted median ensemble [@REF].
+Most submitted forecasts use available daily data, along with potentially other leading predictors, to produce daily forecasts that are then aggregated into weekly forecasts.
 Many use a range of outlier processing techniques to reduce reporting artefacts which can bias forecasts.
-In general, 4 main classes of forecast models are used, statistical forecasting models such as ARIMA models [@REF], mechanistic forecasting models based on the compartmental modelling framework and it's generalisations [@REF], semi-mechanistic approaches that blend both of these approaches [@REF], and human insight based forecast models that may also include elements of other methods [@REF].
+In general, 4 main classes of forecast models are submitted, statistical forecasting models such as ARIMA models [@REF], mechanistic forecasting models based on the compartmental modelling framework and it's generalisations [@REF], semi-mechanistic approaches that blend both of these approaches [@REF], and human insight based forecast models that may also include elements of other methods [@REF].
 Real-time evaluation has shown that each of these classes of models may perform well though in general semi-mechanistic models, and models that include human insights have outperformed other approaches during certain periods of time [@REF].
 We have contributed a range of forecasts to these forecast collobarations generally focussed on semi-mechanistic statistical methods [@REF], and human insight based forecasts [@REF] with our forecasts performing relatively well compared to the majority of those submitted but rarely outperforming significantly.
 The model based forecasts we have contributed have focussed on trying to carefully model the underlying infectious disease dynamics from infection through to symptom onset, and test positivity using non-exponential delay distributions whilst also attempting to model the complexity of daily, within week, reporting periodicity [@REF].
 Based on our observations our forecasts have generally captured changes in trend better than most submitted models that do not use human insight based on known policy changes but have not been robust to reporting issues such as large outliers in reporting and changes to reporting patterns. 
-Our previous methodology also requires signinficant computational resources running for an hour on a 16 core machine when producing forecasts from the ECDC. 
+Our previous methodology also requires signinficant computational resources running for an hour on a 16 core machine when producing forecasts for the ECDC forecasting hub. 
 In our model based forecasts we did not attempt to capture potential future interventions or known interventions not currently observed in the epidemiological data whereas in our human insight models these were implicitly included.
 We found that our human insight based forecasts significantly outperformed our model based forecasts and hypothesised that this may have been driven by including additional information not observed in the epidemiological data [@REF]. 
 Unlike our epidemiologically motivated forecast submissions the hub ensemble forecasts were typically robust to daily reporting artefacts.
-They also demonstrated some ability to forecast future changes in trend that were not present in the observed data similarly to our human insight forecasts indicating the likely inclusion of either human insight or assumptions about future interventions. 
+They also demonstrated some ability to forecast future changes in trend that were not present in the observed data similarly to our human insight forecasts indicating the likely inclusion of either human insight, or assumptions about future interventions. 
 In general, the ensemble forecasts were more auto-correlated and less reactive to changes from stable or reducing case incidence to increasing incidence.
 On the other hand this also meant that the ensemble was less likely to adopt short-term changes in incidence and hence produced better long-term forecasts.
 Finally, the ensemble forecast tended to produce sharper forecasts and have a tendency towards under vs over predicting.
-There is some suggestion that this was partially driven by the ensemble forecasting having non-exponential uncertainty, unlike many infectious disease forecasting models. 
+There is some suggestion that this was partially driven by the ensemble forecast having non-exponential uncertainty, unlike many infectious disease forecasting models. 
 
-Based on these insights from our own forecasting work and from observing the hub ensembles behaviour over time here we define a model with similar, but simplified, epidemiological characteristics to our previous approaches to model based forecasting [@REF] with aim of producing ensemble like perform without sacrificing interpretability.
+Based on these insights from observing the performance of our own forecast submissions and from the hub ensembles over time here we define a model with similar, but simplified, epidemiological characteristics to our previous approaches to model based forecasting [@REF] with aim of producing ensemble like performance without sacrificing interpretability.
 The first simplification we make is to model only weekly data, rather than using daily data and then aggregating, this means that the impact daily reporting artefacts is mitigated.
 It also serves to increase the auto-correlation of the forecasting model as there is an increased lag before changes in daily observations gain signifcant weight in the model this leads to the observed ensemble behaviour of being relatively auto-correlated and resistant to short-term changes in trend.
 The second simplification we make is to ignore the underlying latent infection process and focus only on the observed reported cases.
-This reduces computational requirements and removes the need for external information on the delay from infection to report which can potentially be misspecified leading to reduced forecast performance.
+This reduces computational requirements and removes the need for external information on the delay from infection to report which can potentially be misspecified leading to potentially reduced forecast performance.
 However, this sacrifices some of the interpretability of the forecast model as any epidemiological summary statistics we now calculate will be based on reported cases and not latent infections.
 As discussed in [@gostic] this leads to varying amounts of bias depending on the epidemic phase. 
-The final simplification we make is to model the growth rate as a differenced auto-regressive process with order 1 rather than using a more complex method as we have done in other work [@EpiNow2].
-This represents a parsiminous approach in that we encode our expectation that the growth rate should vary over time and allow this to influance the forecast but we include only a single lag term and hence reduce the computational overhead of the model.
-In order to model potential unobserved interventions and more generally changes in transmission we include an additional growth rate modifier restricted to be between 0 and 1 that differs depending on if the growth rate is positive or negative (due to potential differing responses when cases are growing or increasing) and that acts in a multiplicative fashion (meaning that larger absolute growth rates are reduced to zero growth more rapidly). This reflects a simplified interpretation for how the ensemble appears to react to potential future changes. 
-The only observed for which we do not make an adaption is the apparent sharpness of the ensemble compared to our prior forecasting models choosing instead to make use of a negative binomial observation model allowing the inclusion of overdispersion. 
-This choice is motivated by our belief that the underlying process is an exponential one and therefore an exponential error model is a sensible choice though this is an area of current research.
-We suggest that part of the reason the hub ensembles exhibit this behaviour is due to the penalisation of overprediction compared to underprediction caused by the current usage of a generalsied form of the absolute error for the majority of forecast evaluation. 
+The final simplification we make is to model the growth rate as a differenced auto-regressive process with order 1 rather than using a gaussian process based method as we have done in other work [@EpiNow2].
+This represents a parsiminous approach in that we encode our expectation that the growth rate should vary over time and allow this to influance the forecast but we include only a single lag term, reducing the computational overhead of the model.
+In order to model potential unobserved interventions and more generally changes in transmission we include an additional growth rate modifier restricted to be between 0 and 1 that differs depending on if the growth rate is positive or negative (due to potential differing responses when cases are growing or increasing) and that acts in a multiplicative fashion (meaning that larger absolute growth rates are reduced to zero growth more rapidly).
+This reflects a simplified interpretation for how the ensemble appears to react to potential future changes by assuming a gradual return to stable incidence. 
+The only observation for which we do not make an adaption is the apparent sharpness of the ensemble compared to our prior forecasting models choosing instead to make use of a negative binomial observation model allowing the inclusion of overdispersion. 
+This choice is motivated by our belief that the underlying transmission process is an exponential one and therefore a count error model (where variance is linked to the mean)  is a sensible choice though this is an area of current research.
+We suggest that part of the reason the hub ensembles exhibit this behaviour is due to the penalisation of overprediction compared to underprediction caused by the use of a generalsied form of the absolute error for the majority of forecast evaluation. 
 
-In this study, we define an initial attempt at a surrogate model to replicate the observed behaviour of current multi-team forecast ensembles whilst maintaining a set of clear assumptionse and summarise its implementation, with a focus on minimal resource use and reproducibility, as a GitHub action. 
+In this study, we define an initial attempt at a surrogate model to replicate the observed behaviour of current multi-team forecast ensembles whilst maintaining a set of clear assumptions and summarise its implementation, with a focus on minimal resource use and reproducibility, as a GitHub action. 
 We briefly outline some of the summary statistics it produces and their epidemiological relevance. 
 We then evaluate it's real-time performance in comparison to the ECDC forecast hub ensemble by visualising forecasts, using the weighted interval score [@REF], a commonly used proper scoring rule, and quantifying its empirical coverage.
 We attempt to highlight settings where this model performs well as a surrogate to the ensemble forecast and areas where more work is needed. 
