--- a/paper/paper.Rmd
+++ b/paper/paper.Rmd
@@ -141,19 +141,20 @@ scores <- fread(here("data", "scores.csv")) |>
   rename_models()
 ```
   
-  We extracted forecasts and data on notified weekly COVID-19 cases from the ECDC forecasting hub from 15th of January 2022 to the 19th of July 2022 for the ensemble model (referenced as `EuroCOVIDhub-ensemble` by the hub team) and the surrogate model (submitted as `epiforecasts-weeklygrowth`).
+  We extracted forecasts and data on notified weekly COVID-19 cases from the ECDC forecasting hub from 15th of January 2022 to the 19th of July 2022 for the ensemble model (referred to as the `EuroCOVIDhub-ensemble` by the hub team) and the surrogate model (submitted as `epiforecasts-weeklygrowth`).
   We included all locations covered by the ECDC forecasting hub which were 32 European countries, including all countries of the European Union and European Free Trade Area, and the United Kingdom.
-  Data on notified weekly cases was originally sourced from the Johns Hopkins University curated data repository (JHU, [@REF]).
-  We used the latest available observed data. As observations are subject to revisions this means that the data used to produce forecasts for a given date may not reflect the data used for evaluation.
-  The follows the common practice of the forecasting hub projects in treating the latest available data as the forecast target regardless of the number of data revisions.
+  Data on notified weekly cases was originally sourced from the Johns Hopkins University (JHU) curated data repository [@REF].
+  We used the latest available observed data as of the 20th of August 2022. As observations are subject to revisions this means that the data used to produce forecasts for a given date may not reflect the data used for evaluation.
+  The follows the common practice of the forecasting hub projects in treating the latest available data as the forecast target regardless of the number of potential data revisions.
   Incidence was aggregated over the Morbidity and Mortality Weekly Report (MMWR) epidemiological week definition of Sunday through Saturday.
   
   The ECDC forecast hub requests forecasts for 1 to 4 week forecast horizon and requires forecasts to use a pre-specified format with 23 quantiles of the predictive probability distribution.
   No restrictions were placed on who could submit forecasts and the hub team actively invited particupation from research groups known to be involved with COVID-19 forecasting projects.
-  Forecasters used a wide range of forecasting methods including statistical approaches, mechanistic models including deterministic ordinary differential equation models and agent based model, semi-mechanistic models, expert elicitation models, and ensembles of mutliple approaches (described at https://covid19forecasthub.eu/community.html).
-  Teams submitted forecasts at the latest two days after the complete dataset for the latest forecasting week became available and were allowed to use all data available at the time of submission. 
+  Forecasters used a wide range of forecasting methods including statistical approaches, mechanistic models including deterministic ordinary differential equation models and agent based model, semi-mechanistic models, expert elicitation models, and ensembles of mutliple approaches [@https://covid19forecasthub.eu/community.html].
+  Teams submitted forecasts at the latest two days after the complete dataset for the forecast week became available and were allowed to use all data available at the time of submission (i.e including up to two days of data for the current week). 
   The ensemble forecast was constructed by taking the median of all predictive quantiles without the exlusion of any valid submitted forecast (where validity was defined as passing minimal formatting checks by the hub team). 
-  Submitted forecasts and target observations are freely available from the ECDC forecast hub GitHub repository. We provide code in the repository of this study to streamline access. 
+A ensemble was only produced for locations with at least 3 independent forecast models including the hub baseline model.
+  Submitted forecasts and target observations are available from the ECDC forecast hub GitHub repository [@REF]. We provide code in the repository of this study to streamline access. 
 
 ```{r metadata}
 # Number of locations
@@ -250,7 +251,7 @@ We assume a negative binomial observation model with overdispersion $\phi$ for r
 \end{align*}
 
 Where $r_t$ can be interpreted as the growth rate. $r_t$ is then modelled as a piecewise constant differenced AR(1) process modified such that the dependence of $r_{t-1}$ is multiplied by a decay factor ($\xi_{+,-}$) that varies dynamically according to the sign of $r_{t-1}$.
-The assumptions of this modelling approach are that the growth rate is non-stationary with a trend that is independent of the current growth rate (the differenced AR(1) process), the additional decay factor encodes the belief that larger absolute growth rates will tend more quickly towards no growth and that this process may work differently for positive or negative growth rates.
+This assumes that the growth rate is non-stationary with a trend that is independent of the current growth rate (the differenced AR(1) process), the additional decay factor encodes the belief that larger absolute growth rates will tend more quickly towards no growth and that this process may work differently for positive or negative growth rates.
 This process can be defined as follows, 
 
 \begin{align*}
@@ -271,15 +272,15 @@ The following priors are used,
   \frac{1}{\sqrt{\phi}} &\sim \text{Half-Normal}(0, 1) 
 \end{align*}
 
-Where $\sigma$, and $\frac{1}{\sqrt{phi}}$ are truncated to be greater than 0 and $\beta$ is truncated to be between -1 and 1.
-The Beta priors for $\xi{+,-}$ have been chosen to be weakly informative that the reduction towards 0 growth is relatively slow.
+Where $\sigma$, and $\frac{1}{\sqrt{\phi}}$ are truncated to be greater than 0 and $\beta$ is truncated to be between -1 and 1.
+The Beta priors for $\xi_{+,-}$ have been chosen to be weakly informative that the reduction towards 0 growth is relatively slow.
 Similarly the prior for $\beta$ has been chosen to be weakly informative that there is weak auto-correlation in differenced growth rates.
 $\sigma$ has also been made weakly informative under the assumption that the potential change in growth rates in a single timestep should be relatively small.
 
 ### Summary statistics {-}
 
 As well as posterior predictions and forecasts for notifcations the model also returns several epidemiological summary statistics which may be useful for drawing inferences about underlying transmission dynamics.
-These are the log scale growth rate ($g^{o, \delta}_t$), and the instantaneous effective reproduction number ($R^{o, \delta}_t$).
+These are the log scale weekly growth rate ($g^{o, \delta}_t$), and the instantaneous effective reproduction number ($R^{o, \delta}_t$).
 These are calculated as follows:
 
 \begin{align*}
@@ -287,24 +288,24 @@ These are calculated as follows:
   R^{o, \delta}_t &= e^{\left(T_s r^{o, \delta}_t\right)} \\
 \end{align*}
 
-$T_s$ is a user set scaling parameter that defines the timespan over which the summary metrics apply dependent on the time step of the data.
+$T_s = 7$ is a parameter that defines the weekly timespan over which the summary metrics apply dependent on the time step of the data.
 
 ## Forecast evaluation {-}
 
-In order to standardise forecasts across forecast locations we first normalised both weekly notified test positive cases and forecast test positive cases by the population in the forecast region scaled to be a rate per 10,000 people.
+In order to standardise forecasts across forecast locations we first normalised both weekly notified test positive cases and forecast test positive cases by the population in the forecast region scaled to be an incidence rate per 10,000 people.
 We then evaluated a subset of forecasts from the following countries Germany, Greece, Italy, Poland, Slovakia, and the United Kingdom visually by forecast horizon (1-4 weeks) for both the ensemble and surrogate model. 
-These countries were selected in order to include forecasts based on different numbers and types of submitted forecast models, to be at least somewhat representative of the full sample of forecast locations, and to include nations for which the authors had a good understanding of local data and transmission dynamics in the study period. 
+These countries were selected in order to include forecasts based on different numbers and types of submitted forecast models, to be at least partially representative of the full sample of forecast locations, and to include nations for which the authors had a good understanding of local data and transmission dynamics in the study period. 
 
-We evaluate forecasts quantatively using the weighted interval score (WIS) [@bracherEvaluatingEpidemicForecasts2021], which is a quantile based proper scoring rule that approximates the e continuous ranked probability score (CRPS).
-Both the WIS and CRPS are generalisations of absolute error in order to evaluate probablistic forecasts and are widely used to evaluate COVID-19 forecasts [@REF].
-We present WIS for the subset of forecasts we explore visually for both the ensemble and surrogate model by date and forecast horizon (1 and 4 weeks) as well as summarising across the study period.
+We evaluate forecasts for all locations and horizons quantatively using the weighted interval score (WIS) [@bracherEvaluatingEpidemicForecasts2021], which is a quantile based proper scoring rule that approximates the continuous ranked probability score (CRPS).
+Both the WIS and CRPS are generalisations of absolute error in order to evaluate probablistic forecasts and are widely used to evaluate COVID-19 forecasts, including by the ECDC forecast hub  [@REF].
+We present WIS for the subset of forecasts we explore visually for both the ensemble and surrogate model by date and forecast horizon (1 and 4 weeks).
 
-In order to understand the relative performance of the surrogate model compared to the ensemble model we calculate the relative performance (rWIS) by dividing the WIS for the surrogate model by the WIS of the ensemble model.
+In order to understand the relative performance of the surrogate model compared to the ensemble model we calculate the relative performance (rWIS) by dividing the WIS for the surrogate model by the WIS of the ensemble model for all locations and forecast horizons.
 In order to maintain the properiety of this score we do this after first taking the means of scores for the relavant stratification.
-We explore relative performance by forecast horizon, by forecast month and forecast horizon, and by forecast location and forecast horizon. 
+We explore relative performance by forecast horizon, by month and horizon, and by location and horizon. 
 
 In addition to presenting the WIS for a subset of locations and the relative WIS for all locations we also calculate and visualise the empirical coverage, which is the percentage of observed values within a given interval or below a given quantile, of both the surrogate and ensemble model for the 30%, 60%, and 90% credible intervals and by quantile. 
-Lastly we calculate and visualise the relative interval score by quantile, stratified by forecast horizon.
+Lastly we calculate and visualise the relative weighted interval score by quantile, stratified by forecast horizon.
 
 ```{r eval-parameters}
 locs <- c("United Kingdom", "Germany", "Slovakia", "Italy", "Poland", "Greece")
@@ -357,21 +358,22 @@ relative_wis_thresholds <- relative_wis |>
 
 ## Implementation {-}
 
-The model is implemented in `stan` [@stan] and `R` (`4.2.0`) [@R] as an extension of the baseline model from the `forecast.vocs` R package (`0.0.9.7000`) [@forecast.vocs].
-We note that our use of a Heaviside step function introduces a discontinuity to the posterior making it less suited for use with `stan`. Other model formulations without this would be more efficient.
+The model is implemented in `stan` [@stan] and `R` (`4.2.0`) [@R] as an extension of the baseline model from the `forecast.vocs` R package (`0.0.9.7000`)  [@forecast.vocs].
+We note that our use of a Heaviside step function introduces a discontinuity to the posterior making it less suited for use with `stan`. Other model formulations without feature this would be more efficient and robust.
 The `cmdstanr` R package (`0.5.2`) [@cmdstanr] is used for model fitting with 2 MCMC chains each having 1000 warm-up and 1000 sampling steps each [@cmdstanr].
 `cmstanr` surfaces several settings which trade-off between sampling speed and the robustness of approach.
 Here we take a conservative approach, as model fit is not manually inspected during real-time usage and due to the expected complexity of the posterior [@betancourt_2017], and set the adapt delta setting to 0.99, and the maximum treedepth setting to 15. 
-For real-time usage convergance was not assessed but during model development the Rhat diagnostic was used alongside feedback from `cmdstanr` about the number of divergant transitions and exceedance of the maximum tree depth. During development posterior predictions were also visually compared to observed data [@cmdstanr].
+For real-time usage convergance was not assessed but during model development the Rhat diagnostic was used alongside feedback from `cmdstanr` about the number of divergant transitions and exceedance of the maximum tree depth [@cmdstanr]. During development posterior predictions were also visually compared to observed data.
 
 To download and manipulate forecasts from the ECDC forecasting hub [@EuroHub] we use  the `data.table` (`1.14.2`) [@data.table] and `gh` (`1.3.0`) [@gh] R packages.
 We make use of further functionality from the `forecast.vocs` R package [@forecast.vocs] to prepare data for forecasting, to visualise forecasts and summary measures, and to summarise forecasts.
-Forecast evaluation is implemented using the `scoringutils` R package (1.0.0) [@scoringutils], and the `scoringRules` R package (1.0.1).
+Forecast evaluation is implemented using the `scoringutils` R package (1.0.0) [@scoringutils], and the `scoringRules` R package (1.0.1) [@REF].
 
-To ensure reproducibility of this analysis dependencies are managed using the `renv` R package (`0.14.0`) [@renv] and a Dockerfile file along with built Docker image [@Boettiger:2015dw] (via GitHub Actions) is provided.
-Weekly forecasts are also made use of `renv` and Docker to ensure reproducibility with GitHub actions used to produce the forecasts ensuring we meet our goal of requring limited compute and that our implementation is independent from local resources resulting in democratised access to our approach.
+To ensure reproducibility of this analysis dependencies are managed using the `renv` R package (`0.14.0`) [@renv] and a Dockerfile file along with built Docker image [@Boettiger:2015dw] (via GitHub Actions) is provided in the code repository.
+Weekly forecasts are also made using of `renv` and GitHub actions to ensure they require limited compute and that our implementation is independent from local resources facilitating democratised access.
 The code for this analysis can be found here: https://github.com/epiforecasts/simplified-forecaster-evaluation
 The code for the forecating model defined above along with the infrastructure required to forecast using GitHub Actions can be found here: https://github.com/seabbs/ecdc-weekly-growth-forecasts
+Versions archived on Zenodo are available [@REF] and [@REF].
 
 # Results {-}
 
